--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- Basic options --- #
 
 # [수정필요] 웹페이지 이름
-title: PhD. Seokho Son
+title: kimkj
 
 # [수정필요] 간단한 사이트 설명
 description: Acedemic Website of Seokho Son
@@ -36,10 +36,10 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "shsonkorea@etri.re.kr"
-  facebook: seokho.son.korea
-  github: seokho-son
-  linkedin: seokho-son
+ # email: "shsonkorea@etri.re.kr"
+ # facebook: seokho.son.korea
+ # github: seokho-son
+ # linkedin: seokho-son
 #  twitter: daattali
 #  rss: true
 #  reddit: yourname
